system: Allow keyboard navigation on user drop down menu on tray.

Allows user drop down menu to activatble so that it can be cycled
through.
Add a custom focus search so the drop down menu closes after all items
have been cycled through.
Migrate Closure to OnceClosure.
Make drop down menu a transient child of system bubble.

Test: manual
Bug: 799401
Change-Id: I67af2bb3e58c88f6926ab65ecf565d69325d00b8
Reviewed-on: https://chromium-review.googlesource.com/1038656
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555756}
Former-commit-id: 255cb689a99532759bc54f4bb54a059b42286a29